catchpole/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catchpole
  labels:
    app: catchpole
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: catchpole
  template:
    metadata:
      labels:
        app: catchpole
    spec:
      containers:
        - name: catchpole
          image: ghcr.io/fireacademy/catchpole:1.1.6
          ports:
            - name: http
              containerPort: 5000
          resources:
            requests:
              cpu: "1"
              memory: "1G"
            limits:
              cpu: "1"
              memory: "1G"
          startupProbe:
            httpGet:
              path: /
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 7
            failureThreshold: 3 
            periodSeconds: 5
