catchpole/service.yml
apiVersion: v1
kind: Service
metadata:
  name: catchpole
  labels:
    app: catchpole
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: catchpole
