catchpole/ingress-no-https.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kraken-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: catchpole
      port:
        number: 5000
  rules:
  - host: kraken.fireacademy.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: catchpole
            port:
              number: 5000
